cpp/appunti/funzioni/par_rif/formali.txt
formali.cpp: In function ‘int f(const int&)’:
formali.cpp:12:4: error: assignment of read-only reference ‘n’
   12 |  n += 10; // Errore!
      |  ~~^~~~~
